<resources>
    <string name="app_name">Base Calculator and Converter</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_a">A</string>
    <string name="btn_b">B</string>
    <string name="btn_c">C</string>
    <string name="btn_d">D</string>
    <string name="btn_e">E</string>
    <string name="btn_f">F</string>
    <string name="btn_decimal">.</string>
    <string name="btn_left_par">(</string>
    <string name="btn_right_par">)</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_multiply">*</string>
    <string name="btn_divide">/</string>
    <string name="btn_equals">=</string>
    <string-array name="base_array">
        <item>Base 2 - Binary</item>
        <item>Base 3 - Ternary</item>
        <item>Base 4 - Quaternary</item>
        <item>Base 5 - Quinary</item>
        <item>Base 6 - Senary</item>
        <item>Base 7 - Septenary</item>
        <item>Base 8 - Octal</item>
        <item>Base 9 - Nonary</item>
        <item>Base 10 - Decimal</item>
        <item>Base 11 - Undecimal</item>
        <item>Base 12 - Duodecimal</item>
        <item>Base 13 - Tridecimal</item>
        <item>Base 14 - Tetradecimal</item>
        <item>Base 15 - Pentadecimal</item>
        <item>Base 16 - Hexadecimal</item>
    </string-array>
</resources>
