<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="annaharri89.github.io.basecalculatorandconverter.MainActivity">

    <Button
        android:id="@+id/btn_1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_1"
        app:layout_constraintRight_toLeftOf="@+id/btn_2"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_decimal"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_2"
        app:layout_constraintBottom_toBottomOf="@+id/btn_1"
        app:layout_constraintLeft_toRightOf="@+id/btn_1"
        app:layout_constraintRight_toLeftOf="@+id/btn_3"
        app:layout_constraintTop_toTopOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_3"
        app:layout_constraintBottom_toBottomOf="@+id/btn_2"
        app:layout_constraintLeft_toRightOf="@+id/btn_2"
        app:layout_constraintRight_toLeftOf="@+id/btn_multiply"
        app:layout_constraintTop_toTopOf="@+id/btn_2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_4"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_5"
        app:layout_constraintBottom_toBottomOf="@+id/btn_4"
        app:layout_constraintLeft_toRightOf="@+id/btn_4"
        app:layout_constraintRight_toLeftOf="@+id/btn_6"
        app:layout_constraintTop_toTopOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_6"
        app:layout_constraintBottom_toBottomOf="@+id/btn_5"
        app:layout_constraintLeft_toRightOf="@+id/btn_5"
        app:layout_constraintRight_toLeftOf="@+id/btn_minus"
        app:layout_constraintTop_toTopOf="@+id/btn_5"
        android:layout_marginRight="0dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toRightOf="@+id/btn_9" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_7"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_8"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_8"
        app:layout_constraintBottom_toBottomOf="@+id/btn_7"
        app:layout_constraintRight_toLeftOf="@+id/btn_9"
        app:layout_constraintLeft_toRightOf="@+id/btn_7"
        app:layout_constraintTop_toTopOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_9"
        app:layout_constraintBottom_toBottomOf="@+id/btn_8"
        app:layout_constraintRight_toLeftOf="@+id/btn_plus"
        app:layout_constraintLeft_toRightOf="@+id/btn_8"
        app:layout_constraintTop_toTopOf="@+id/btn_8" />

    <Button
        android:id="@+id/btn_decimal"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_decimal"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_a"
        app:layout_constraintRight_toLeftOf="@+id/btn_0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_0"
        app:layout_constraintLeft_toRightOf="@+id/btn_decimal"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/btn_decimal"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_decimal"
        app:layout_constraintRight_toLeftOf="@+id/btn_left_par"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/btn_left_par"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_left_par"
        app:layout_constraintBottom_toBottomOf="@+id/btn_0"
        app:layout_constraintLeft_toRightOf="@+id/btn_0"
        app:layout_constraintRight_toLeftOf="@+id/btn_right_par"
        app:layout_constraintTop_toTopOf="@+id/btn_0" />

    <Button
        android:id="@+id/btn_right_par"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_right_par"
        app:layout_constraintBottom_toBottomOf="@+id/btn_left_par"
        app:layout_constraintLeft_toRightOf="@+id/btn_left_par"
        app:layout_constraintRight_toLeftOf="@+id/btn_divide"
        app:layout_constraintRight_toRightOf="@+id/btn_3"
        app:layout_constraintTop_toTopOf="@+id/btn_left_par"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_a"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_a"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_d"
        app:layout_constraintRight_toLeftOf="@+id/btn_b"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_b"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_b"
        app:layout_constraintBottom_toBottomOf="@+id/btn_a"
        app:layout_constraintLeft_toRightOf="@+id/btn_a"
        app:layout_constraintRight_toLeftOf="@+id/btn_c"
        app:layout_constraintTop_toTopOf="@+id/btn_a" />

    <Button
        android:id="@+id/btn_c"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_c"
        app:layout_constraintBottom_toBottomOf="@+id/btn_b"
        app:layout_constraintLeft_toRightOf="@+id/btn_b"
        app:layout_constraintTop_toTopOf="@+id/btn_b"
        app:layout_constraintRight_toLeftOf="@+id/btn_equals"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_d"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_d"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_e"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_e"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_e"
        app:layout_constraintBottom_toBottomOf="@+id/btn_d"
        app:layout_constraintLeft_toRightOf="@+id/btn_d"
        app:layout_constraintRight_toLeftOf="@+id/btn_f"
        app:layout_constraintTop_toTopOf="@+id/btn_d"
        android:layout_marginRight="0dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_f"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_f"
        app:layout_constraintBottom_toBottomOf="@+id/btn_e"
        app:layout_constraintLeft_toRightOf="@+id/btn_e"
        app:layout_constraintTop_toTopOf="@+id/btn_e"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/space"
        android:layout_marginRight="0dp" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_plus"
        app:layout_constraintTop_toTopOf="@+id/btn_9"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_9"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toRightOf="@+id/btn_9"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_minus"
        app:layout_constraintBottom_toBottomOf="@+id/btn_6"
        app:layout_constraintLeft_toRightOf="@+id/btn_6"
        app:layout_constraintTop_toTopOf="@+id/btn_6"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_multiply"
        app:layout_constraintBottom_toBottomOf="@+id/btn_3"
        app:layout_constraintLeft_toRightOf="@+id/btn_3"
        app:layout_constraintTop_toTopOf="@+id/btn_3"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_divide"
        app:layout_constraintBottom_toBottomOf="@+id/btn_right_par"
        app:layout_constraintLeft_toRightOf="@+id/btn_right_par"
        app:layout_constraintTop_toTopOf="@+id/btn_right_par"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="80dp"
        android:layout_height="105dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn_equals"
        app:layout_constraintBottom_toBottomOf="@+id/btn_f"
        app:layout_constraintLeft_toRightOf="@+id/btn_c"
        app:layout_constraintTop_toTopOf="@+id/btn_c"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/btn_plus"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <ListView
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <Space
        android:id="@+id/space"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_f"
        app:layout_constraintLeft_toRightOf="@+id/btn_f"
        app:layout_constraintTop_toTopOf="@+id/btn_f"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.512" />

</android.support.constraint.ConstraintLayout>
